@@ -1,5 +1,8 @@
 package com.habimed.habimedWebService.consultorio.domain.service;
 
+import com.habimed.habimedWebService.exception.ResourceNotFoundException;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
@@ -18,47 +21,65 @@ public class ConsultorioServiceImpl implements ConsultorioService {
 
     private final ConsultorioRepository consultorioRepository;
     private final ModelMapper modelMapper;
+    private static final double COORDINATE_TOLERANCE = 0.000002;
 
     @Override
-    public List<Consultorio> findAll() {
-        return consultorioRepository.findAll();
+    public List<ConsultorioResponseDto> findAll() {
+        List<Consultorio> consultorios = consultorioRepository.findByEstadoTrue();
+        return consultorios.stream()
+                .map(consultorio -> modelMapper.map(consultorio, ConsultorioResponseDto.class))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<Consultorio> findAllWithConditions(ConsultorioFilterDto consultorioFilterDto) {
-        // IMPLEMENTACIÓN TEMPORAL (reemplazar con consultas personalizadas del repositorio):
+    public List<ConsultorioResponseDto> findAllWithConditions(ConsultorioFilterDto consultorioFilterDto) {
         List<Consultorio> consultorios = consultorioRepository.findAll();
-        
+
         // Filtrar por campos del FilterDto si no son null
         if (consultorioFilterDto.getNombre() != null && !consultorioFilterDto.getNombre().trim().isEmpty()) {
             consultorios = consultorios.stream()
-                    .filter(c -> c.getNombre() != null && 
+                    .filter(c -> c.getNombre() != null &&
                             c.getNombre().toLowerCase().contains(consultorioFilterDto.getNombre().toLowerCase()))
                     .collect(Collectors.toList());
         }
-        
-        if (consultorioFilterDto.getUbicacion() != null && !consultorioFilterDto.getUbicacion().trim().isEmpty()) {
+
+        // Filtro por latitud
+        if (consultorioFilterDto.getLatitud() != null) {
             consultorios = consultorios.stream()
                     .filter(c -> c.getLatitud() != null &&
-                            c.getLatitud().toLowerCase().contains(consultorioFilterDto.getUbicacion().toLowerCase()))
+                            c.getLatitud().equals(consultorioFilterDto.getLatitud()))
                     .collect(Collectors.toList());
         }
-        
+
+        // Filtro por longitud
+        if (consultorioFilterDto.getLongitud() != null) {
+            consultorios = consultorios.stream()
+                    .filter(c -> c.getLongitud() != null &&
+                            c.getLongitud().equals(consultorioFilterDto.getLongitud()))
+                    .collect(Collectors.toList());
+        }
+
         if (consultorioFilterDto.getRuc() != null && !consultorioFilterDto.getRuc().trim().isEmpty()) {
             consultorios = consultorios.stream()
-                    .filter(c -> c.getRuc() != null && 
+                    .filter(c -> c.getRuc() != null &&
                             c.getRuc().equals(consultorioFilterDto.getRuc()))
                     .collect(Collectors.toList());
         }
-        
-        return consultorios;
+
+        // Convertir a DTO usando ModelMapper
+        return consultorios.stream()
+                .map(consultorio -> modelMapper.map(consultorio, ConsultorioResponseDto.class))
+                .collect(Collectors.toList());
     }
 
     @Override
     public ConsultorioResponseDto getById(Integer id) {
         Optional<Consultorio> consultorio = consultorioRepository.findById(id);
         if (consultorio.isPresent()) {
-            return modelMapper.map(consultorio.get(), ConsultorioResponseDto.class);
+            if (consultorio.get().getEstado()) {
+                return modelMapper.map(consultorio.get(), ConsultorioResponseDto.class);
+            }
+            throw new ResourceNotFoundException("Consultorio eliminado");
         }
         throw new RuntimeException("Consultorio no encontrado con ID: " + id);
     }
@@ -66,28 +87,32 @@ public class ConsultorioServiceImpl implements ConsultorioService {
     @Override
     public ConsultorioResponseDto save(ConsultorioInsertDto consultorioInsertDto) {
         // Validaciones específicas del contexto de Consultorio
-        if (consultorioInsertDto.getRuc() != null && !consultorioInsertDto.getRuc().trim().isEmpty()) {
-            // Verificar si ya existe un consultorio con ese RUC
-            List<Consultorio> existingConsultorios = consultorioRepository.findAll();
-            boolean rucExists = existingConsultorios.stream()
-                    .anyMatch(c -> c.getRuc() != null && c.getRuc().equals(consultorioInsertDto.getRuc()));
-            
-            if (rucExists) {
-                throw new RuntimeException("Ya existe un consultorio con RUC: " + consultorioInsertDto.getRuc());
-            }
+
+        // Verificar si ya existe un consultorio con ese RUC
+        List<Consultorio> existingConsultorios = consultorioRepository.findAll();
+        boolean rucExists = existingConsultorios.stream()
+                .anyMatch(c -> c.getRuc() != null && c.getRuc().equals(consultorioInsertDto.getRuc()));
+
+        if (rucExists) {
+            throw new RuntimeException("Ya existe un consultorio con RUC: " + consultorioInsertDto.getRuc());
         }
+
         
         // Verificar si ya existe un consultorio con el mismo nombre en la misma ubicación
-        List<Consultorio> existingConsultorios = consultorioRepository.findAll();
         boolean duplicateExists = existingConsultorios.stream()
-                .anyMatch(c -> c.getNombre() != null && c.getLatitud() != null &&
-                        c.getNombre().equalsIgnoreCase(consultorioInsertDto.getNombre()) &&
-                        c.getLatitud().equalsIgnoreCase(consultorioInsertDto.getUbicacion()));
+                .anyMatch(c ->
+                        c.getNombre() != null &&
+                                c.getLatitud() != null &&
+                                c.getLongitud() != null &&
+                                c.getNombre().equalsIgnoreCase(consultorioInsertDto.getNombre()) &&
+                                Math.abs(c.getLatitud() - consultorioInsertDto.getLatitud()) < COORDINATE_TOLERANCE &&
+                                Math.abs(c.getLongitud() - consultorioInsertDto.getLongitud()) < COORDINATE_TOLERANCE
+                );
         
         if (duplicateExists) {
             throw new RuntimeException("Ya existe un consultorio con el nombre '" + 
-                    consultorioInsertDto.getNombre() + "' en la ubicación '" + 
-                    consultorioInsertDto.getUbicacion() + "'");
+                    consultorioInsertDto.getNombre() + "' en la ubicación: " +
+                    consultorioInsertDto.getLatitud() + ", "+ consultorioInsertDto.getLongitud());
         }
         
         Consultorio consultorio = modelMapper.map(consultorioInsertDto, Consultorio.class);
@@ -103,8 +128,9 @@ public class ConsultorioServiceImpl implements ConsultorioService {
             Consultorio consultorio = existingConsultorio.get();
             
             // Validar RUC único si se está actualizando
-            if (consultorioUpdateDto.getRuc() != null && !consultorioUpdateDto.getRuc().trim().isEmpty() &&
-                !consultorioUpdateDto.getRuc().equals(consultorio.getRuc())) {
+            if (consultorioUpdateDto.getRuc() != null &&
+                    !consultorioUpdateDto.getRuc().isBlank() &&
+                    !consultorioUpdateDto.getRuc().equals(consultorio.getRuc())) {
                 
                 List<Consultorio> existingConsultorios = consultorioRepository.findAll();
                 boolean rucExists = existingConsultorios.stream()
@@ -123,8 +149,12 @@ public class ConsultorioServiceImpl implements ConsultorioService {
             if (consultorioUpdateDto.getNombre() != null && !consultorioUpdateDto.getNombre().trim().isEmpty()) {
                 consultorio.setNombre(consultorioUpdateDto.getNombre());
             }
-            if (consultorioUpdateDto.getUbicacion() != null && !consultorioUpdateDto.getUbicacion().trim().isEmpty()) {
-                consultorio.setLatitud(consultorioUpdateDto.getUbicacion());
+            if (consultorioUpdateDto.getLatitud() != null) {
+                consultorio.setLatitud(consultorioUpdateDto.getLatitud());
+            }
+
+            if (consultorioUpdateDto.getLongitud() != null) {
+                consultorio.setLongitud(consultorioUpdateDto.getLongitud());
             }
             if (consultorioUpdateDto.getDireccion() != null && !consultorioUpdateDto.getDireccion().trim().isEmpty()) {
                 consultorio.setDireccion(consultorioUpdateDto.getDireccion());
@@ -140,34 +170,14 @@ public class ConsultorioServiceImpl implements ConsultorioService {
         throw new RuntimeException("Consultorio no encontrado con ID: " + id);
     }
 
+    @Transactional
     @Override
     public Boolean delete(Integer id) {
-        Optional<Consultorio> consultorio = consultorioRepository.findById(id);
-        
-        if (consultorio.isPresent()) {
-            Consultorio consultorioEntity = consultorio.get();
-            
-            // Verificar si tiene doctores asociados antes de eliminar
-            if (consultorioEntity.getDoctores() != null && !consultorioEntity.getDoctores().isEmpty()) {
-                throw new RuntimeException("No se puede eliminar el consultorio con ID " + id + 
-                        " porque tiene doctores asociados");
-            }
-            
-            // Verificar si tiene servicios asociados antes de eliminar
-            if (consultorioEntity.getServicios() != null && !consultorioEntity.getServicios().isEmpty()) {
-                throw new RuntimeException("No se puede eliminar el consultorio con ID " + id + 
-                        " porque tiene servicios asociados");
-            }
-            
-            consultorioRepository.deleteById(id);
-            return true;
-        }
-        
-        return false;
+        Consultorio consultorio = consultorioRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Consultorio no encontrado"));
+        consultorio.setEstado(Boolean.FALSE); // Eliminación lógica
+        consultorioRepository.save(consultorio);
+        return Boolean.TRUE;
     }
 
-    // Método específico existente (mantenido para compatibilidad)
-    public ConsultorioResponseDto getConsultorioById(Integer id) {
-        return getById(id); // Reutilizar el método estándar
-    }
 }
